@@ -1,9 +1,6 @@
 package org.sugarcubes.cloner;
 
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
-import java.util.Map;
-import java.util.WeakHashMap;
+import org.sugarcubes.reflection.XReflection;
 
 /**
  * Object factory which uses no-arg constructor to create object.
@@ -12,41 +9,9 @@ import java.util.WeakHashMap;
  */
 public class ReflectionObjectFactory implements ObjectFactory {
 
-    /**
-     * Weak cache for default constructors.
-     */
-    private final Map<Class, Constructor> constructorCache = new WeakHashMap<>();
-
-    /**
-     * Returns no-arg constructor (visible or not) for the class.
-     *
-     * @param clazz class
-     * @return no-arg constructor
-     */
-    private <T> Constructor<T> getNoArgConstructor(Class<T> clazz) {
-        return constructorCache.computeIfAbsent(clazz, this::getDeclaredNoArgConstructor);
-    }
-
-    private <T> Constructor<T> getDeclaredNoArgConstructor(Class<T> clazz) {
-        Constructor<T> constructor;
-        try {
-            constructor = clazz.getDeclaredConstructor();
-        }
-        catch (NoSuchMethodException e) {
-            throw new ClonerException("There's no no-arg constructor for the " + clazz, e);
-        }
-        constructor.setAccessible(true);
-        return constructor;
-    }
-
     @Override
-    public <T> T newInstance(Class<T> clazz) {
-        try {
-            return getNoArgConstructor(clazz).newInstance();
-        }
-        catch (IllegalAccessException | InstantiationException | InvocationTargetException e) {
-            throw new ClonerException(e);
-        }
+    public <T> T newInstanceUnsafe(Class<T> clazz) throws Throwable {
+        return XReflection.of(clazz).getConstructor().newInstance();
     }
 
 }
